--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "axios": "^0.27.2",
     "immer": "^9.0.14",
     "react": "^18.1.0",
+    "react-date-picker": "^8.4.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
