--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "hr-net-package-dropdown": "^1.0.0",
     "immer": "^9.0.14",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.2",
@@ -23,7 +24,7 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
