--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/runtime": "^7.18.3",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "hr-net-package-dropdown": "^1.0.0",
+    "dotenv": "^16.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
     "immer": "^9.0.14",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-npm-library-dropdown": "^1.1.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
