--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hr-net",
-  "homepage": "http://MarineHgns.github.io/hr-net",
+  "homepage": "https://MarineHgns.github.io/hr-net",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
